WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275728
[GLib] Fix CLang build after switch to C++23
https://bugs.webkit.org/show_bug.cgi?id=275728
Summary
[GLib] Fix CLang build after switch to C++23
Philippe Normand
Reported
2024-06-21 02:02:58 PDT
/usr/bin/../lib/gcc/x86_64-redhat-linux/14/../../../../include/c++/14/bits/unique_ptr.h:91:16: error: invalid application of 'sizeof' to an incomplete type 'WebKitAutomationClient' 91 | static_assert(sizeof(_Tp)>0, | ^~~~~~~~~~~ /usr/bin/../lib/gcc/x86_64-redhat-linux/14/../../../../include/c++/14/bits/unique_ptr.h:398:4: note: in instantiation of member function 'std::default_delete<WebKitAutomationClient>::operator()' requested here 398 | get_deleter()(std::move(__ptr)); | ^ /var/home/phil/WebKit/Source/WebKit/UIProcess/API/glib/WebKitWebContext.cpp:213:5: note: in instantiation of member function 'std::unique_ptr<WebKitAutomationClient>::~unique_ptr' requested here 213 | _WebKitWebContextPrivate() | ^ /var/home/phil/WebKit/Source/WebKit/UIProcess/API/glib/WebKitWebContext.cpp:209:7: note: forward declaration of 'WebKitAutomationClient' 209 | class WebKitAutomationClient; | ^ 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-06-21 02:06:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30036
EWS
Comment 2
2024-06-21 03:30:44 PDT
Committed
280243@main
(18670f2c3a78): <
https://commits.webkit.org/280243@main
> Reviewed commits have been landed. Closing PR #30036 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug