[GLib] Fix CLang build after switch to C++23 https://bugs.webkit.org/show_bug.cgi?id=275728

Unreviewed, remove forward-declaration of classes used in std::unique_ptr<T>. Since C++23 unique_ptr seems to
expect a complete type.

* Source/WebKit/UIProcess/API/glib/WebKitWebContext.cpp:
(WebKitAutomationClient::browserVersion const):
(WebKitAutomationClient::requestAutomationSession):
* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
(PageLoadStateObserver::didChangeIsLoading):
(PageLoadStateObserver::didChangeTitle):
(PageLoadStateObserver::willChangeActiveURL):
(PageLoadStateObserver::didChangeActiveURL):

Canonical link: https://commits.webkit.org/280243@main